@@ -1,3 +1,7 @@
+2013-01-28 Dominik Reichardt <dominus@users.sourceforge.net>	
+	* audio/midi_drivers/CoreAudioMidiDriver.*: ripped out code that went into 
+	  the CoreMidiDriver a long time ago.
+	  
 2013-01-27	Malignant Manor <malignantmanor@users.sourceforge.net>
 	* actors.*: charmed_more_difficult was updated for new charmed alignment.
 	  charmed_more_difficult will now only put charmed party members into combat
